# Proyectounlp

./: .gitignore  README.md  main.py
admin/: README.md  app.py  pyproject.toml
admin/src/core/: board.py  config.py  database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: __init__.py  issue.py  label.py
admin/src/web/: __init__.py  commands.py  config.py  helpers.py  routes.py  storage.py
admin/src/web/api/: issues.py
admin/src/web/controllers/: auth.py  issues.py  users.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/schemas/: issues.py  user.py
admin/src/web/templates/: about.html  error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/issues/: index.html
admin/src/web/templates/users/: edit.html  index.html
admin/static/: error.css  flash.css  style.css
admin/tests/: __init__.py  test_home.py  test_issues.py
portal/: bash.exe.stackdump  package-lock.json  package.json
portal/src/: App.vue
portal/src/components/: IssuesList.vue
portal/src/router/: index.js
portal/src/stores/: issues.js
portal/src/views/: IssuesView.vue
src/: calculator.py  operations.py
