[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Juan Sebastián Beltrán Leal <beltry1@hotmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
