[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Juan Sebastián Beltrán Leal <beltry1@hotmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
minio = "^7.2.9"
python-dotenv = "^1.0.1"
marshmallow = "^3.23.1"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
